# T-IOT-902_sensorSensei

./: .env.exemple  .gitignore  Doxyfile  README.md  docker-compose.yml  platformio.ini  start_app.sh  stop_app.sh
.github/workflows/: api_build.yaml  build.yaml  doxygen.yaml  iot_build.yaml  mirroring.yaml
api/: Cargo.toml  Dockerfile  README.md  Settings.toml
api/src/: app.rs  config.rs  main.rs  state.rs
api/src/dtos/: measure.rs
api/src/exceptions/: api_exception.rs  mod.rs
api/src/extractors/: dto_extractor.rs  mod.rs
api/src/handlers/: measure.rs  mod.rs
api/src/services/: measure.rs  mod.rs  sensor_community.rs
docs/: COMPONENTS_CHOICES.md  DUST_SENSOR.md  GY-BMP280.md  ICD.md  LilyGo_LoRa32.md  SPH0645.md  Test_Functionnal.md  heltec_automation_LoRa_32.md
grafana/data/: grafana.db
iot/: Doxyfile  config.ini  platformio.ini
iot/include/: App.h  EmitterApp.h  ReceptorApp.h
iot/lib/Receptor/: ExampleObserverReceptor.h  ReceptorDeviceManager.cpp  ReceptorDeviceManager.h  library.json
iot/lib/SensorApi/: README.md  library.json
iot/lib/SensorApi/src/: HttpClient.cpp  HttpClient.h  IClient.h  ILoRa.h  Measure.cpp  Measure.h  MyHttpClient.cpp  MyHttpClient.h  SensorApi.cpp  SensorApi.h  optional.hpp
iot/lib/Shared/: library.json
iot/lib/Shared/src/: DeviceInfos.cpp  IClient.h  ICommunication.h  IPacketObserver.h  LoRaCommunicationManager.cpp  LoRaCommunicationManager.h
iot/lib/Utils/: Utils.cpp  Utils.h
iot/lib/emitter/: EmitterDeviceManager.cpp  EmitterDeviceManager.h  library.json
iot/lib/emitter/PowerManager/: PowerManager.cpp  PowerManager.h
iot/lib/emitter/board/: boards.h  utilities.h
iot/lib/emitter/domain/: DeviceType.h  ISensor.h  SensorType.h
iot/lib/emitter/powerManager/: PowerManager.cpp  PowerManager.h
iot/lib/receptor/: ReceptorDeviceManager.cpp  ReceptorDeviceManager.h  library.json
iot/lib/receptor/core/: DataManager.cpp  DataManager.h
iot/src/emitter/: App.cpp  EmitterApp.cpp  main.cpp
iot/src/receptor/: ReceptorApp.cpp  main.cpp
iot/test/test_embedded/: test.cpp  test.h  test_sensorapi.cpp
iot/test/test_native/: test.cpp  test.h  test_optional.cpp  test_sensorapi.cpp  test_utils.cpp
src/emitter/: main.cpp
test/: test.cpp
(+69 files in other folders)
