[package]
name = "api"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.5.1"}
serde = { version = "1.0.197", features = ["derive"] }
serde_json = {version = "1.0.115"}
influxdb = { version = "0.7.2", features = ["derive"] }
url = "2.5.0"
config = "0.14.0"
dotenv = { version = "0.15.0" }
chrono = { version = "0.4.37", features = ["serde"] }
rand = "0.8.5"
validator = { version = "0.16", features = ["derive"] }
reqwest = {version = "0.12.3", features = ["json"]}
mockito = "1.4.0"
tokio = "1.37.0"
tracing = {version = "0.1.40"}
tracing-log = "0.2.0"
tracing-actix-web = "0.7.11"
env_logger = {version = "0.11.3"}
anyhow = {version = "1.0.86"}
thiserror = { version = "1.0.61" }
log = "0.4.21"